chore: add default config values

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -10,4 +10,4 @@ LIMITED_PAGINATION_MAX_ITEMS=100000
 DISABLE_API_SCHEMA_DOCS=false
 DISABLE_EXTERNAL_API=false
 DATABASE_STATEMENT_TIMEOUT_MS=90000
-CONTRACT_VERIFICATION_API_URL=https://zksync2-testnet-explorer.zksync.dev
+CONTRACT_VERIFICATION_API_URL=http://127.0.0.1:3070
