--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -70,6 +70,8 @@ jobs:
         uses: actions/cache@v3
         env:
           cache-name: cache-node-modules
+          # Workaround for bug https://github.com/typicode/husky/issues/991
+          HUSKY: 0
         with:
           path: node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
@@ -77,16 +79,6 @@ jobs:
               ${{ runner.os }}-build-${{ env.cache-name }}-
               ${{ runner.os }}-build-
               ${{ runner.os }}-
-
-      - name: Install dependencies
-        working-directory: ./
-        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-        run: |
-          whoami
-          pwd
-          sleep 9999999
-          npm pkg delete scripts.prepare
-          npm ci
 
       - name: Download allurectl
         run: wget https://github.com/allure-framework/allurectl/releases/latest/download/allurectl_linux_386 -O ./allurectl
