--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -36,7 +36,7 @@
     "@willsoto/nestjs-prometheus": "^4.7.0",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "0.14.0",
     "ethers": "^5.7.2",
     "helmet": "^6.0.0",
     "jest-mock-extended": "^3.0.1",
