--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,7 +22,7 @@
   },
   "prettier": "@matterlabs/prettier-config",
   "lint-staged": {
-    "*.{vue,js,ts}": "npm run lint"
+    "*.{vue,js,ts}": "echo test"
   },
   "dependencies": {
     "@matterlabs/composables": "1.1.7",
@@ -92,8 +92,8 @@
     "start-server-and-test": "^1.14.0",
     "storybook-vue3-router": "^2.2.1",
     "tailwindcss": "^3.0.23",
-    "vite": "2.9.14",
-    "vitest": "0.15.2",
+    "vite": "2.9.16",
+    "vitest": "0.19.0",
     "vue-loader": "16.8.3",
     "vue-tsc": "0.33.6"
   }
