--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,12 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # Allure
-/allure-results/
+#Allure results and artifacts
+**/allure-results/
+**/e2e/artifacts/
+**/playbook/artifacts*
+**/playbook/cache*
+**/buffer/*.txt
 
 # App hyperchain config
 hyperchain.config.json
