--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ volumes
 cypress/videos/
 cypress/screenshots/
 tests/e2e/reports/
-**/tests/e2e/artifacts/
 
 # Logs
 logs
@@ -55,7 +54,12 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # Allure
-**allure-results/
+#Allure results and artifacts
+**/allure-results/
+**/e2e/artifacts/
+**/playbook/artifacts*
+**/playbook/cache*
+**/buffer/*.txt
 
 # App hyperchain config
 hyperchain.config.json
