chore: docker compose for cli

--- a/packages/app/Dockerfile
+++ b/packages/app/Dockerfile
@@ -8,5 +8,6 @@ COPY --chown=node:node .npmrc .npmrc
 COPY --chown=node:node lerna.json ./
 COPY --chown=node:node package*.json ./
 COPY --chown=node:node ./packages/app/package*.json ./packages/app/
-RUN npm ci
+RUN npm ci --ignore-scripts && npm cache clean --force
 COPY --chown=node:node ./packages/app/. ./packages/app
+RUN rm -f .npmrc
