--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -58,6 +58,7 @@ jobs:
     name: '${{ matrix.tags }}'
     container:
       image: mcr.microsoft.com/playwright:v1.27.0-focal
+      options: --user 1001
     steps:
       - uses: actions/checkout@v3
         with:
