feat: add sepolia testnet to config

--- a/packages/app/src/configs/staging.config.json
+++ b/packages/app/src/configs/staging.config.json
@@ -10,13 +10,28 @@
       "icon": "/images/icons/zksync-arrows.svg",
       "l1ExplorerUrl": "https://goerli.etherscan.io",
       "l2ChainId": 280,
-      "l2NetworkName": "zkSync Era Testnet",
+      "l2NetworkName": "zkSync Era Goerli Testnet",
       "l2WalletUrl": "https://goerli.staging-portal.zksync.dev/",
       "maintenance": false,
       "name": "goerli",
       "newProverUrl": "https://storage.googleapis.com/zksync-era-testnet-proofs/proofs_fri",
       "published": true,
       "rpcUrl": "https://testnet.era.zksync.dev"
+    },
+    {
+      "apiUrl": "https://block-explorer-api.sepolia.zksync.dev",
+      "verificationApiUrl": "https://explorer.sepolia.era.zksync.dev",
+      "bridgeUrl": "https://staging.goerli.bridge.zksync.dev",
+      "icon": "/images/icons/zksync-arrows.svg",
+      "l1ExplorerUrl": "https://sepolia.etherscan.io",
+      "l2ChainId": 300,
+      "l2NetworkName": "zkSync Era Sepolia Testnet",
+      "l2WalletUrl": "https://staging-portal.zksync.dev/?network=era-boojnet",
+      "maintenance": false,
+      "name": "sepolia",
+      "newProverUrl": "https://storage.googleapis.com/zksync-era-testnet-proofs/proofs_fri",
+      "published": true,
+      "rpcUrl": "https://sepolia.era.zksync.dev"
     },
     {
       "apiUrl": "https://block-explorer-api.stage.zksync.dev",
