feat: config to hide swagger for bff endpoints

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -8,6 +8,7 @@ PORT=3020
 LOG_LEVEL=debug
 LIMITED_PAGINATION_MAX_ITEMS=100000
 DISABLE_API_SCHEMA_DOCS=false
+DISABLE_BFF_API_SCHEMA_DOCS=false
 DISABLE_EXTERNAL_API=false
 DATABASE_STATEMENT_TIMEOUT_MS=90000
 CONTRACT_VERIFICATION_API_URL=http://127.0.0.1:3070
