--- a/packages/api/.env.test
+++ b/packages/api/.env.test
@@ -2,4 +2,5 @@ DATABASE_URL='postgres://postgres:postgres@localhost:5432/block-explorer-e2e'
 METRICS_PORT=3005
 PORT=3007
 LIMITED_PAGINATION_MAX_ITEMS=15
+API_LIMITED_PAGINATION_MAX_ITEMS=15
 CONTRACT_VERIFICATION_API_URL=http://verification.api
