--- a/packages/worker/.env.example
+++ b/packages/worker/.env.example
@@ -30,5 +30,9 @@ DISABLE_BALANCES_PROCESSING=false
 DISABLE_OLD_BALANCES_CLEANER=false
 DISABLE_BLOCKS_REVERT=false
 
+ENABLE_TOKEN_INFO_WORKER=false
+UPDATE_TOKEN_INFO_INTERVAL=86400000
+TOKEN_INFO_MIN_LIQUIDITY_FILTER=1000000
+
 FROM_BLOCK=0
 TO_BLOCK=
