--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -31,6 +31,7 @@
     "migration:revert": "npm run typeorm migration:revert -- -d ./src/typeorm.config.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -39,6 +40,7 @@
     "@nestjs/terminus": "^9.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "@willsoto/nestjs-prometheus": "^4.7.0",
+    "axios": "^1.4.0",
     "ethers": "^5.7.1",
     "nest-winston": "^1.7.0",
     "pg": "^8.8.0",
