--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -33,7 +33,7 @@ env:
 
 jobs:
   e2e:
-    runs-on: [self-hosted, ci-runner]
+    runs-on: [matterlabs-ci-runner]
     permissions:
       contents: read
     defaults:
