--- a/package.json
+++ b/package.json
@@ -26,25 +26,25 @@
     "hyperchain:configure": "ts-node scripts/setup-hyperchain-config"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@matterlabs/prettier-config": "^1.0.2",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
+    "@matterlabs/prettier-config": "^1.0.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/github": "^8.1.0",
+    "@semantic-release/npm": "^9.0.2",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/node": "18.17.18",
+    "dotenv": "16.1.4",
+    "enquirer": "2.3.6",
     "eslint": "8.48.0",
     "husky": "8.0.1",
-    "lerna": "^7.2.0",
+    "lerna": "^7.4.2",
+    "pg-connection-string": "2.6.2",
     "prettier": "2.8.4",
-    "semantic-release": "^21.1.1",
-    "typescript": "4.7.4",
-    "enquirer": "2.3.6",
-    "dotenv": "16.1.4",
-    "pg-connection-string": "2.6.2"
+    "semantic-release": "^21.1.2",
+    "typescript": "4.7.4"
   },
   "engines": {
     "npm": ">=9.0.0",
