--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -64,24 +64,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Cache node modules
-        id: cache-nodemodules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          path: node_modules
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-              ${{ runner.os }}-build-${{ env.cache-name }}-
-              ${{ runner.os }}-build-
-              ${{ runner.os }}-
+          node-version: '20'
+          cache: 'npm'
 
       - name: Install dependencies
         working-directory: ./
+        # if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         run: |
           npm pkg delete scripts.prepare
-          npm ci --no-audit
+          npm ci
 
       - name: Download allurectl
         run: wget https://github.com/allure-framework/allurectl/releases/latest/download/allurectl_linux_386 -O ./allurectl
