--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "packages/*"
   ],
   "scripts": {
+    "prepare": "husky install",
     "lint": "lerna run lint",
     "test": "lerna run test",
     "test:ci": "lerna run test:ci",
