--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -91,6 +91,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./
+        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         run: |
           npm pkg delete scripts.prepare
           npm ci
