--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -61,13 +61,19 @@ jobs:
 
     name: '${{ matrix.tags }}'
     container:
-      image: mcr.microsoft.com/playwright:v1.27.0-focal
-      options: --user 1001
+      image: mcr.microsoft.com/playwright:v1.39.0-jammy
+      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+          
       - name: Cache node modules
         id: cache-nodemodules
         uses: actions/cache@v3
