--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -28,12 +28,24 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
-      - name: Install Firebase CLI and auth
-        run: |
-          npm install -g firebase-tools
+      - name: Cache node modules
+        id: cache-nodemodules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+          # Workaround for bug https://github.com/typicode/husky/issues/991
+          HUSKY: 0
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+              ${{ runner.os }}-build-${{ env.cache-name }}-
+              ${{ runner.os }}-build-
+              ${{ runner.os }}-
 
       - name: Install dependencies
         working-directory: ./
+        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         run: |
           npm pkg delete scripts.prepare
           npm ci
