--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -36,11 +36,11 @@ jobs:
         run: |
           npm run lint -- --no-fix --max-warnings 0
 
-      # - name: Test
-      #   run: npm run test:ci
+      - name: Test
+        run: npm run test:ci
 
-      # - name: Type check
-      #   run: npm run typecheck
+      - name: Type check
+        run: npm run typecheck
 
       - name: Build
         run: |
@@ -75,4 +75,4 @@ jobs:
       targetUrl: ${{ needs.build.outputs.dappUrl }}
       default_network_value_for_e2e: "/?network=mainnet"
       publish_to_allure: true
-      environmentTags: "and not @stagingEnv"
+      environmentTags: "and not @productionEnv"
