--- a/packages/worker/.env.example
+++ b/packages/worker/.env.example
@@ -32,7 +32,10 @@ DISABLE_BLOCKS_REVERT=false
 
 ENABLE_TOKEN_OFFCHAIN_DATA_SAVER=false
 UPDATE_TOKEN_OFFCHAIN_DATA_INTERVAL=86400000
-TOKEN_OFFCHAIN_DATA_MIN_LIQUIDITY_FILTER=0
+SELECTED_TOKEN_OFFCHAIN_DATA_PROVIDER=coingecko
 
 FROM_BLOCK=0
 TO_BLOCK=
+
+COINGECKO_IS_PRO_PLAN=false
+COINGECKO_API_KEY=
