--- a/packages/app/src/configs/production.config.json
+++ b/packages/app/src/configs/production.config.json
@@ -10,12 +10,29 @@
       "icon": "/images/icons/zksync-arrows.svg",
       "l1ExplorerUrl": "https://goerli.etherscan.io",
       "l2ChainId": 280,
-      "l2NetworkName": "zkSync Era Testnet",
+      "l2NetworkName": "zkSync Era Goerli Testnet",
       "l2WalletUrl": "https://goerli.portal.zksync.io/",
       "maintenance": false,
       "name": "goerli",
       "published": true,
       "rpcUrl": "https://testnet.era.zksync.dev"
+    },
+    {
+      "apiUrl": "https://block-explorer-api.sepolia.zksync.dev",
+      "verificationApiUrl": "https://explorer.sepolia.era.zksync.dev",
+      "bridgeUrl": "https://bridge.zksync.io",
+      "hostnames": [
+        "https://sepolia.explorer.zksync.io"
+      ],
+      "icon": "/images/icons/zksync-arrows.svg",
+      "l1ExplorerUrl": "https://sepolia.etherscan.io",
+      "l2ChainId": 300,
+      "l2NetworkName": "zkSync Era Sepolia Testnet",
+      "l2WalletUrl": "https://portal.zksync.io/",
+      "maintenance": false,
+      "name": "sepolia",
+      "published": true,
+      "rpcUrl": "https://sepolia.era.zksync.dev"
     },
     {
       "apiUrl": "https://block-explorer-api.mainnet.zksync.io",
