--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -29,8 +29,7 @@ jobs:
       - name: Checkout with Submodule
         uses: actions/checkout@v3
         with:
-          submodules: recursive
-          token: ${{ secrets.ZKSYNC_ADMIN_BOT_ORG_REPO_WRITE }}
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -55,6 +54,7 @@ jobs:
 
       - name: Start docker containers
         run: |
+          ls
           docker-compose -f "docker-compose.yaml" up -d --build
 
       - name: List running containers
@@ -65,4 +65,6 @@ jobs:
 
       - name: Stop containers
         if: always()
-        run: docker-compose -f "docker-compose.yaml" down
+        run: |
+          ls
+          docker-compose -f "docker-compose.yaml" down
