--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci
+          npm ci --no-audit
           npx playwright install --with-deps chromium
 
 #      - name: Spin up the BE frontend
