--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Start docker containers
         run: |
           ls
-          docker-compose up -d --build
+          docker-compose -f "docker-compose-cli.yaml" up -d --build
 
       - name: List running containers
         run: docker ps
@@ -67,4 +67,4 @@ jobs:
         if: always()
         run: |
           ls
-          docker-compose down
+          docker-compose -f "docker-compose-cli.yaml" down
