test: sepolia for testnetSmokeSuite

--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -100,7 +100,7 @@ jobs:
           echo "Run tests"
             if [ "${{ matrix.tags }}" = "@testnetSmokeSuite" ]; then
                 echo "Run in testnetSmokeSuite only"
-                E2ENETWORK='/?network=goerli' npx cucumber-js --tags "${{ matrix.tags }} ${{ inputs.environmentTags }} and not @mainnet"
+                E2ENETWORK='/?network=sepolia' npx cucumber-js --tags "${{ matrix.tags }} ${{ inputs.environmentTags }} and not @mainnet"
             else
                 echo "Run in mainnet"
                 E2ENETWORK='${{ inputs.default_network_value_for_e2e }}' npx cucumber-js --tags "${{ matrix.tags }} ${{ inputs.environmentTags }} and not @testnet"
