test: switch and fix test on sepolia

--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # Allure
-/allure-results/
+**allure-results/
 
 # App hyperchain config
 hyperchain.config.json
