--- a/packages/app/src/configs/staging.config.json
+++ b/packages/app/src/configs/staging.config.json
@@ -65,7 +65,8 @@
       "maintenance": false,
       "name": "mainnet",
       "published": true,
-      "rpcUrl": "https://mainnet.era.zksync.io"
+      "rpcUrl": "https://mainnet.era.zksync.io",
+      "tokensMinLiquidity": 0
     }
   ]
 }
