--- a/.gitignore
+++ b/.gitignore
@@ -53,12 +53,8 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-#Allure results and artifacts
-**/allure-results/
-**/e2e/artifacts/
-**/playbook/artifacts*
-**/playbook/cache*
-**/buffer/*.txt
+#Allure results
+**allure-results/
 
 # App hyperchain config
 hyperchain.config.json
