--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -70,7 +70,7 @@ jobs:
     uses: ./.github/workflows/app-e2e.yml
     secrets: inherit
     permissions:
-      contents: read
+      contents: write
     with:
       targetUrl: ${{ needs.build.outputs.dappUrl }}
       testnet_network_value_for_e2e: "/?network=sepolia"
