test: refacoring - adding notes to readme.md

--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -123,7 +123,7 @@ jobs:
           name: allure-results
           path: packages/app/allure-results
 
-      - name: Upload tests to Allure
+      - name: Upload test results to Allure reporter
         if: always()
         env:
           ALLURE_TOKEN: ${{ secrets.ALLURE_TOKEN }}
