feat: use multiple transactions for parallel blocks processing

--- a/packages/worker/.env.example
+++ b/packages/worker/.env.example
@@ -12,6 +12,7 @@ BLOCKCHAIN_RPC_URL=http://localhost:3050
 
 WAIT_FOR_BLOCKS_INTERVAL=1000
 BLOCKS_PROCESSING_BATCH_SIZE=10
+NUMBER_OF_BLOCKS_PER_DB_TRANSACTION=10
 
 BATCHES_PROCESSING_POLLING_INTERVAL=60000
 DELETE_BALANCES_INTERVAL=300000
