fix: block response structure

--- a/packages/data-fetcher/Dockerfile
+++ b/packages/data-fetcher/Dockerfile
@@ -8,9 +8,9 @@ RUN apk add --update python3 make g++ && rm -rf /var/cache/apk/*
 COPY --chown=node:node .npmrc .npmrc
 COPY --chown=node:node lerna.json ./
 COPY --chown=node:node package*.json ./
-COPY --chown=node:node ./packages/worker/package*.json ./packages/worker/
+COPY --chown=node:node ./packages/data-fetcher/package*.json ./packages/data-fetcher/
 RUN npm ci --ignore-scripts --only=production && npm cache clean --force
-COPY --chown=node:node ./packages/worker/. ./packages/worker
+COPY --chown=node:node ./packages/data-fetcher/. ./packages/data-fetcher
 RUN rm -f .npmrc
 
 FROM base-stage AS development-stage
@@ -27,17 +27,17 @@ FROM base-stage AS production-stage
 # HEALTHCHECK --interval=30s --timeout=3s --retries=5 \
 #   CMD curl -f http://localhost:${PORT}/health || exit 1
 
-COPY --chown=node:node --from=build-stage /usr/src/app/packages/worker/dist ./packages/worker/dist
+COPY --chown=node:node --from=build-stage /usr/src/app/packages/data-fetcher/dist ./packages/data-fetcher/dist
 
 ARG NODE_ENV=production
 ENV NODE_ENV $NODE_ENV
 
-ARG PORT=3001
+ARG PORT=3040
 ENV PORT $PORT
 
 EXPOSE $PORT 9229 9230
 
 USER node
-WORKDIR /usr/src/app/packages/worker
+WORKDIR /usr/src/app/packages/data-fetcher
 
 CMD [ "node", "dist/main.js" ]
