--- a/packages/data-fetcher/.env.example
+++ b/packages/data-fetcher/.env.example
@@ -1,5 +1,5 @@
 LOG_LEVEL=debug
-PORT=3001
+PORT=3040
 
 BLOCKCHAIN_RPC_URL=http://localhost:3050
 
@@ -7,3 +7,5 @@ RPC_CALLS_DEFAULT_RETRY_TIMEOUT=30000
 RPC_CALLS_QUICK_RETRY_TIMEOUT=500
 RPC_CALLS_CONNECTION_TIMEOUT=20000
 RPC_CALLS_CONNECTION_QUICK_TIMEOUT=10000
+
+MAX_BLOCKS_BATCH_SIZE=20
