--- a/packages/data-fetcher/.env.example
+++ b/packages/data-fetcher/.env.example
@@ -5,6 +5,8 @@ BLOCKCHAIN_RPC_URL=http://localhost:3050
 
 RPC_CALLS_DEFAULT_RETRY_TIMEOUT=30000
 RPC_CALLS_QUICK_RETRY_TIMEOUT=500
+RPC_CALLS_RETRIES_MAX_TOTAL_TIMEOUT=90000
+
 RPC_CALLS_CONNECTION_TIMEOUT=20000
 RPC_CALLS_CONNECTION_QUICK_TIMEOUT=10000
 
