test: updated contract hash for ui test

--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -3,7 +3,7 @@ on: pull_request
 
 jobs:
   runTests:
-    name: Run API integration tests
+    name: API test
     timeout-minutes: 30
     runs-on: ubuntu-latest
     permissions:
