--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -39,6 +39,16 @@ jobs:
         run: |
           npm ci --no-audit
           npx playwright install --with-deps chromium
+
+      - name: Cache Docker images
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.docker
+          key: ${{ runner.os }}-docker-${{ hashFiles('**/*.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -48,6 +58,7 @@ jobs:
       - name: Start docker containers
         run: |
           docker-compose -f "docker-compose.yaml" up -d --build
+
       - name: List running containers
         run: docker ps
 
