--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -2,7 +2,31 @@ name: Integration test - API
 on: pull_request
 
 jobs:
+  startDocker:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      checks: write
+    steps:
+      - name: Checkout with Submodule
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Start Docker container
+        run: |
+          docker-compose -f "docker-compose.yaml" build
+          docker-compose -f "docker-compose.yaml" up -d
+
   runTests:
+    needs: startDocker
     timeout-minutes: 30
     runs-on: ubuntu-latest
     permissions:
@@ -40,38 +64,18 @@ jobs:
           npm ci --no-audit
           npx playwright install --with-deps chromium
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build Docker container
-        run: |
-          docker-compose -f "docker-compose.yaml" build
-
-      - name: Start Docker containers
-        run: |
-          docker-compose -f "docker-compose.yaml" up -d
-
-      - name: Cache Docker images
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.docker
-          key: ${{ runner.os }}-docker-${{ hashFiles('**/*.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-docker-
-
-      - name: List running containers
+      - name: List running containers (for debug purposes)
         run: docker ps
 
-      - name: API tests run (parallel)
+      - name: API tests run
         run: |
           cd packages/integration-tests
           npx jest --verbose --testPathPattern=${{ matrix.test-pattern }}
 
+  stopDocker:
+    needs: runTests
+    runs-on: ubuntu-latest
+    steps:
       - name: Stop Docker containers
-        if: always()
         run: |
           docker-compose -f "docker-compose.yaml" down
